@@ -29,6 +29,18 @@
 
         Reviewed by Adam Barth.
 
+        Fix SVG tag name casing for HTMLTreeBuilder
+        https://bugs.webkit.org/show_bug.cgi?id=41998
+
+        Tested by html5lib/runner.html
+
+        * html/HTMLTreeBuilder.cpp:
+        (WebCore::):
+
+2010-07-09  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
         Implement SVG attribute case mapping for HTMLTreeBuilder
         https://bugs.webkit.org/show_bug.cgi?id=41949
 
